--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solrtwitter",
+  "name": "solr-twitter",
   "version": "1.0.0",
   "description": "solr twitter framework",
   "main": "index.js",
@@ -8,13 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arnaud.gaudinat@hesge.ch/solrtwitter"
+    "url": "https://github.com/arnaud.gaudinat@hesge.ch/solr-twitter"
   },
   "keywords": ["solr twitter"],
   "author": "gaudinat <arnaud.gaudinat@hesge.ch>",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/arnaud.gaudinat@hesge.ch/solrtwitter/issues"
+    "url": "https://github.com/arnaud.gaudinat@hesge.ch/solr-twitter/issues"
   },
   "dependencies": {},
   "devDependencies": {
